--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.3.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "faker": "^5.1.0",
     "graphql": "^15.4.0",
+    "graphql-shield": "^7.4.3",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pg": "^8.5.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "sequelize-slugify": "^1.3.1"
+    "sequelize-slugify": "^1.3.1",
+    "stripe": "^8.126.0"
   }
 }
