--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-graphql": "^0.11.0",
     "faker": "^5.1.0",
     "graphql": "^15.4.0",
+    "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.4.3",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
