--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "graphql": "^15.4.0",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.4.3",
+    "graphql-upload": "^11.0.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
     "pg": "^8.5.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
