--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "backend",
+  "name": "bookstore-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon index.js"
+    "serve": "nodemon index.js",
+    "init": "node db/init.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.3.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "faker": "^5.1.0",
