--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon index.js",
-    "init": "node db/init.js"
+    "init": "node db/init.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -35,5 +36,11 @@
     "sequelize": "^6.3.5",
     "sequelize-slugify": "^1.3.1",
     "stripe": "^8.126.0"
+  },
+  "engines": {
+    "node": "12.11.1"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
