--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.5.0",
     "pg-hstore": "^2.3.3",
+    "pg-native": "^3.0.0",
     "sequelize": "^6.3.5",
     "sequelize-slugify": "^1.3.1",
     "stripe": "^8.126.0"
