--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-FRONTEND_URL = 
+FRONTEND_URL= 
 STRIPE_SK=
 
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_CLOUD_NAME=
 
-SENDGRID_API =
-MAIL_FROM = 
+MJ_APIKEY_PUBLIC=
+MJ_APIKEY_PRIVATE=
+MAIL_FROM=
 
-DATABASE_URL = 
+DATABASE_URL=
 
-PORT = 80
+PORT=80
