--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.4.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "compression": "^1.7.4",
@@ -28,13 +27,14 @@
     "graphql-upload": "^11.0.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "node-mailjet": "^3.3.4",
     "pg": "^8.5.0",
     "pg-hstore": "^2.3.3",
     "pg-native": "^3.0.0",
-    "sequelize": "^6.3.5",
+    "sequelize": "^6.12.0",
     "sequelize-slugify": "^1.3.1",
     "stripe": "^8.126.0"
   },
